force-app/main/default/objects/Margenes__mdt/Margenes__mdt.object-meta.xml
<CustomObject>
    <label>MargenesDeVenta</label>
    <pluralLabel>MargenesDeVenta</pluralLabel>
</CustomObject>