force-app/main/default/objects/Margenes__mdt/fields/MargenFijo__c.field-meta.xml
<CustomField>
    <fullName>MargenFijo__c</fullName>
    <label>MargenFijo</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>