force-app/main/default/objects/Margenes__mdt/fields/MargenVariable__c.field-meta.xml
<CustomField>
    <fullName>MargenVariable__c</fullName>
    <label>MargenVariable</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>