force-app/main/default/objects/Margenes__mdt/fields/Mercado__c.field-meta.xml
<CustomField>
    <fullName>Mercado__c</fullName>
    <label>Mercado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A.Pub-Admin. Pública</fullName>
                <default>true</default>
                <label>A.Pub-Admin. Pública</label>
            </value>
            <value>
                <fullName>Banca-Banca</fullName>
            </value>
            <value>
                <fullName>Energía</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Estruct.-Estructura</fullName>
            </value>
            <value>
                <fullName>Industria-Industria</fullName>
            </value>
            <value>
                <fullName>Seguros-Seguros</fullName>
            </value>
            <value>
                <fullName>Telco-Media</fullName>
            </value>
            <value>
                <fullName>Telco-Telco</fullName>
            </value>
            <value>
                <fullName>Industria-Retail</fullName>
            </value>
            <value>
                <fullName>Industria-Travel</fullName>
            </value>
            <value>
                <fullName>Retail &amp; Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Education &amp; Services</fullName>
            </value>
            <value>
                <fullName>Logistics &amp; Transportation</fullName>
            </value>
            <value>
                <fullName>Automotive &amp; Mobility</fullName>
            </value>
            <value>
                <fullName>Life Science</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Travel &amp; Hospitality &amp; Leisure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>