force-app/main/default/objects/Margenes__mdt/fields/Sede__c.field-meta.xml
<CustomField>
    <fullName>Sede__c</fullName>
    <label>Sede</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1210</fullName>
                <default>true</default>
                <label>1210</label>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1110</fullName>
            </value>
            <value>
                <fullName>4410</fullName>
                <label>VASS Perú</label>
            </value>
            <value>
                <fullName>VASS Colombia</fullName>
            </value>
            <value>
                <fullName>VASS México</fullName>
            </value>
            <value>
                <fullName>VASS Chile</fullName>
            </value>
            <value>
                <fullName>2110</fullName>
                <label>VASS UK</label>
            </value>
            <value>
                <fullName>VASS Benelux</fullName>
            </value>
            <value>
                <fullName>1800</fullName>
            </value>
            <value>
                <fullName>VDSHOP</fullName>
            </value>
            <value>
                <fullName>Comunytek</fullName>
            </value>
            <value>
                <fullName>1410</fullName>
                <label>T4S</label>
            </value>
            <value>
                <fullName>CRI</fullName>
            </value>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Movetia</fullName>
            </value>
            <value>
                <fullName>4000</fullName>
                <label>Nateevo MX</label>
            </value>
            <value>
                <fullName>4010</fullName>
                <label>Nateevo CO</label>
            </value>
            <value>
                <fullName>4001</fullName>
                <label>Nateevo M360</label>
            </value>
            <value>
                <fullName>1100</fullName>
            </value>
            <value>
                <fullName>VASS GERMANY</fullName>
            </value>
            <value>
                <fullName>4700</fullName>
            </value>
            <value>
                <fullName>1120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>