force-app/main/default/objects/Margenes__mdt/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
                <default>true</default>
                <label>AM</label>
            </value>
            <value>
                <fullName>LL</fullName>
            </value>
            <value>
                <fullName>SW</fullName>
            </value>
            <value>
                <fullName>TM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>